--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,22 +1,17 @@
 name: example
 description: "A new Flutter project."
 
-
-publish_to: 'none' 
-
-
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.0
-
-
+  sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.8
+
+  cupertino_icons: ^1.0.6
   flutter_login_hub:
     path: ..
 
@@ -25,12 +20,10 @@ dev_dependencies:
     sdk: flutter
 
 
-  
-  flutter_lints: ^4.0.0
+  flutter_lints: ^3.0.0
 
 
 flutter:
-  
   uses-material-design: true
   assets:
     - assets/
