--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,13 @@ version: 0.0.1
 homepage: https://github.com/Pradipjadav05/flutter_login_hub.git
 
 environment:
-  sdk: ^3.5.0
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  get:
 
 dev_dependencies:
   flutter_test:
